Bug Fix: Stoped shrinking on mobile

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
   }
 }
 /*Shrinking for mobile*/
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   .waves {
     height:40px;
     min-height:40px;
@@ -78,7 +78,7 @@ body {
   h1 {
     font-size:24px;
   }
-}
+}*/
 
 
 ul {
